[gd_scene load_steps=2 format=3 uid="uid://c1mqmim8nnytx"]

[ext_resource type="Script" uid="uid://dfmgrwdb7etus" path="res://scripts/question_menu.gd" id="1_cd274"]

[node name="MultipleChoice" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -640.0
offset_right = 640.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cd274")

[node name="Continue" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(220, 100)
layout_mode = 1
offset_right = 220.0
offset_bottom = 100.0
text = "Continue
"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -64.0
offset_right = -160.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
autowrap_mode = 3

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 160.0
offset_top = -64.0
offset_right = 480.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
autowrap_mode = 3

[node name="Button3" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -224.0
offset_right = -160.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
autowrap_mode = 3

[node name="Button4" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 160.0
offset_top = -224.0
offset_right = 480.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
autowrap_mode = 3

[node name="Submit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 96.0
offset_right = 128.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
text = "Submit"

[node name="Exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_bottom = 64.0
grow_horizontal = 0
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -512.0
offset_top = 256.0
offset_right = 512.0
offset_bottom = 384.0
grow_horizontal = 2
theme_type_variation = &"HeaderLarge"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Response" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -64.0
offset_right = 128.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "type here..."
wrap_mode = 1

[node name="FeedbackPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
offset_right = 1280.0
offset_bottom = 1280.0

[node name="FeedbackLabel" type="Label" parent="FeedbackPanel"]
layout_mode = 1
offset_right = 1280.0
offset_bottom = 1280.0
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="Button3" to="." method="_on_button_3_button_down"]
[connection signal="button_down" from="Button4" to="." method="_on_button_4_button_down"]
[connection signal="button_down" from="Submit" to="." method="_on_submit_button_down"]
[connection signal="button_down" from="Exit" to="." method="_on_exit_button_down"]
